# CMakeBrasilBlog

001_hello_world/: CMakeLists.txt
002_libs/: CMakeLists.txt
002_libs/libAmerica/src/: argentina.c  brasil.c
003_libsPt2/: CMakeLists.txt
003_libsPt2/executavel/src/: executavel.c
003_libsPt2/libAmerica/inc/: argentina.h  brasil.h
